--- a/lesson7/labs/bigSquare/css/style.css
+++ b/lesson7/labs/bigSquare/css/style.css
@@ -27,6 +27,7 @@ body {
 	font-size: 13px;
 	line-height: 1.1;
 	background: #FFF;
+	height: 100%;
 }
 
 
@@ -44,6 +45,8 @@ body {
 
 #header {
 	padding: 20px 0px;
+	margin: 0px;
+	height: 100%;
 }
 
 	
