--- a/lesson7/labs/busyHands/style.css
+++ b/lesson7/labs/busyHands/style.css
@@ -1,13 +1,46 @@
 
+header {
+  background: url('../images/bg_wrapper.png') repeat-x;
+  background-color: transparent;
+  height: 488x;
+
+}
+
+#main:{
+	background: url('../images/bg_body.jpg')
+}
+/* Nav */
+
+nav {
+	width: 100%;
+	display: block;
+	font-color: white;
+}
+
+
+	nav ul li {
+		float: left;
+		margin-right: 20px;	
+	}
+
+		
+	nav li a {
+		display: block;
+		width: 100px;
+		padding: 10px 0px;
+		
+	}
+
+/* Social Media */
+
 li{
 	float:left;
 }
 li a {
 	display: block;
-  background-image: url(../images/socialNav.png);
+  background-image: url(images/socialNav.png);
   width: 60px;
   height: 60px;
-  text-indent: -300px;
 }
 
 .linkedin a {background-position: 0px 64px;}
